# aimarket-desktop

./: CONTRIBUTORS.md  README.md  SECURITY.md  melos.yaml
.github/workflows/: ci.yml
apps/ai-stack-migration-assistant/: README.md  package.json
apps/ai-stack-migration-assistant/docs/: architecture.md  sdk-integration.md  user-cases.md
apps/ai-stack-migration-assistant/src/: extension.ts  patcher.ts
apps/capability-composer/: CONTRIBUTORS.md  README.md  SECURITY.md  pubspec.yaml
apps/capability-composer/docs/: architecture.md  localization.md  sdk-integration.md  user-cases.md  (+2 more)
apps/cold-outreach-coach/: CONTRIBUTORS.md  README.md  SECURITY.md  pubspec.yaml
apps/creator-algorithm-coach/: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pubspec.yaml
apps/discovery-prospector/: CONTRIBUTORS.md  README.md  SECURITY.md  pubspec.yaml
apps/freelance-contract-reviewer/: CONTRIBUTORS.md  README.md  SECURITY.md  pubspec.yaml
apps/interview-prep-coach/: .flutter-plugins-dependencies  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml
apps/local-security-audit/: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
apps/local-security-audit/docs/: architecture.md  sdk-integration.md  user-cases.md
apps/local-security-audit/docs/screens/: README.md
apps/local-security-audit/src-tauri/src/: main.rs
apps/personal-finance-coach/: CONTRIBUTORS.md  README.md  SECURITY.md  pubspec.yaml
apps/reputation-dashboard/: CONTRIBUTORS.md  README.md  SECURITY.md  pubspec.yaml
(+175 files in other folders)
